fix remove unused modal and add search when button clicked

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="d-flex ms-auto">
               <input class="form-control me-2" style="min-width: 370px;" type="search" placeholder="Search" aria-label="Search" id="input-keyword"/>
-              <button class="btn btn-outline-light" type="submit" id="button-search">Search</button>
+              <button class="btn btn-outline-light" type="button" id="button-search">Search</button>
           </div>
         </div> 
         
